test/typecheck/errors/var-as-type.boa
O: output sum of int;
O << 1;
p: input = input; # error
